--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "template",
   "version": "1.0.0",
+  "homepage": "https://kzncvaa.github.io/testmeta",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-cli serve --config webpack.dev.js --open --hot",
-    "build": "webpack --config webpack.prod.js"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "webpack-cli serve --config webpack.dev.js --open --hot react-scripts start",
+    "build": "webpack --config webpack.prod.js react-scripts build"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +26,7 @@
     "css-loader": "^5.0.2",
     "favicons-webpack-plugin": "^5.0.1",
     "file-loader": "^6.2.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.1.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
